--- a/experiment-2/analysis/stats/ioi.Rmd
+++ b/experiment-2/analysis/stats/ioi.Rmd
@@ -36,8 +36,6 @@ Description: This is a summary of tempo analysis.
   + [All](#art_group_all)
   + [Phrase bondaries](#art_group_phrase)
   + [Trial by trial](#art_group_trial)
-  
-- [Sequence plot](#sequence_art)
 
 ## [Dynamics](#ioi-dynamics)
 
@@ -51,7 +49,7 @@ Description: This is a summary of tempo analysis.
   + [Phrase bondaries](#dyn_group_phrase)
   + [Trial by trial](#dyn_group_trial)
   
-- [Sequence plot](#sequence_dyn)
+## [Sequence plot](#sequence)
 
 ```{r setup, include = FALSE}
 # packages
@@ -86,7 +84,9 @@ dt_ioi_dyn <- dt_ioi[Skill == "dynamics"]
 
 ```{r ioi-art, echo = FALSE}
 # For each individual
-ioi_art <- dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill)]
+ioi_art_trial <- dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)]
+
+ioi_art <- ioi_art_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill)]
 ioi_art
 ```
 
@@ -95,7 +95,7 @@ ioi_art
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-art-box,  echo = FALSE}
-ggboxplot(dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Articulation") + 
+ggboxplot(ioi_art_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Articulation") + 
   geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
@@ -116,8 +116,7 @@ ioi_art_all
 ```{r ioi-art-all-box, echo = FALSE}
 ioi_art_plot <- data.table(subject = ioi_art[Condition == "teaching"]$SubNr, teaching = ioi_art[Condition == "teaching"]$Mean, performing = ioi_art[Condition == "performing"]$Mean)
 
-ggpaired(ioi_art_plot, cond1 = "performing", cond2 = "teaching", color = "condition", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Articulation") +
-  geom_hline(yintercept = 1, linetype = "dashed")
+ggpaired(ioi_art_plot, cond1 = "performing", cond2 = "teaching", color = "condition", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Articulation") + geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 ### Statistics
@@ -161,7 +160,9 @@ dt_ioi_art$Boundary <- "No"
 dt_ioi_art[Subcomponent == "LtoS" | Subcomponent == "StoL"]$Boundary <- "Yes"
 
 # For each individual
-ioi_art_ch <- dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, Boundary)]
+ioi_art_ch_trial <- dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Boundary)]
+
+ioi_art_ch <- ioi_art_ch_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill, Boundary)]
 ioi_art_ch
 ```
 
@@ -170,9 +171,7 @@ ioi_art_ch
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-art-ch-box, echo = FALSE}
-ggboxplot(dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Boundary)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Articulation") +
-  facet_grid(Boundary ~ .) +
-  geom_hline(yintercept = 1, linetype = "dashed")
+ggboxplot(ioi_art_ch_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Articulation") + facet_grid(Boundary ~ .) + geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 ## 4. Phrase boundaries - group{#art_group_phrase}
@@ -214,7 +213,6 @@ summary(ioi_art_ch_aov_2)
 
 ```{r ioi-art-trial, echo = FALSE}
 # For each individual
-ioi_art_trial <- dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, TrialNr)]
 ioi_art_trial
 ```
 
@@ -255,7 +253,9 @@ ggline(ioi_art_trial, x = "TrialNr", y = "Mean", add = "mean_se", position = pos
 
 ```{r ioi-dyn, echo = FALSE}
 # For each individual
-ioi_dyn <- dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill)]
+ioi_dyn_trial <- dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)]
+
+ioi_dyn <- ioi_dyn_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill)]
 ioi_dyn
 ```
 
@@ -264,8 +264,7 @@ ioi_dyn
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-dyn-box,  echo = FALSE}
-ggboxplot(dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") + 
-  geom_hline(yintercept = 1, linetype = "dashed")
+ggboxplot(ioi_dyn_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") + geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 ## 2. All - group{#dyn_group_all}
@@ -291,7 +290,6 @@ ggpaired(ioi_dyn_plot, cond1 = "performing", cond2 = "teaching", color = "condit
 
 ### Statistics
 #### Normality check
-
 ```{r normality2, echo = FALSE}
 # Normality check
 ioi_dyn_diff <- ioi_dyn[Condition == "teaching"]$Mean-ioi_dyn[Condition == "performing"]$Mean
@@ -300,7 +298,6 @@ ioi_dyn_norm
 ```
 
 #### Paired *t*-test
-
 ```{r paired-dyn, echo = FALSE}
 ioi_dyn_ttest <- t.test(ioi_dyn[Condition == "teaching"]$Mean, ioi_dyn[Condition == "performing"]$Mean, paired = TRUE, alternative = "two.sided")
 ioi_dyn_ttest
@@ -332,7 +329,9 @@ dt_ioi_dyn$Boundary <- "No"
 dt_ioi_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF"]$Boundary <- "Yes"
 
 # For each individual
-ioi_dyn_ch <- dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, Boundary)]
+ioi_dyn_ch_trial <- dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Boundary)]
+
+ioi_dyn_ch <- ioi_dyn_ch_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill, Boundary)]
 ioi_dyn_ch
 ```
 
@@ -341,9 +340,7 @@ ioi_dyn_ch
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-dyn-ch-box, echo = FALSE}
-ggboxplot(dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Boundary)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") + 
-  facet_grid(Boundary ~ .) +
-  geom_hline(yintercept = 1, linetype = "dashed")
+ggboxplot(ioi_dyn_ch_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") + facet_grid(Boundary ~ .) + geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 ## 4. Phrase boundaries - group{#dyn_group_phrase}
@@ -385,7 +382,6 @@ summary(ioi_dyn_ch_aov_2)
 
 ```{r ioi-dyn-trial, echo = FALSE}
 # For each individual
-ioi_dyn_trial <- dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, TrialNr)]
 ioi_dyn_trial
 ```
 
@@ -394,7 +390,7 @@ ioi_dyn_trial
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-dyn-trial-line, echo = FALSE, fig.height = 4}
-ggline(dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
+ggline(ioi_dyn_trial, x = "TrialNr", y = "Mean", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
   facet_wrap(SubNr ~ .) +
   scale_x_continuous(breaks = seq(1,8,1)) +
   geom_hline(yintercept = 1, linetype = "dashed")
@@ -419,7 +415,8 @@ ggline(ioi_dyn_trial, x = "TrialNr", y = "Mean", add = "mean_se", position = pos
   geom_hline(yintercept = 1, linetype = "dashed") +
   scale_x_continuous(breaks = seq(1,8,1))
 ```
-# Sequence plot
+
+# Sequence plot{#sequence}
 ## Articulation{#sequence_art}
 ```{r seq-art, fig.width = 9, fig.height = 3, echo = FALSE}
 # For each individual
